<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/medium_brown"
    android:weightSum="3"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1.5"
        android:weightSum="1"
        >
        <Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/dark_brown"
            android:elevation="4dp"
            android:title="@string/welcome"
            android:titleTextColor="@color/primary_white"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.8"
            app:srcCompat="@drawable/logo_coffee" />

        <TextView
            android:id="@+id/coffee_title"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:textColor="@color/dark_brown"
            android:textAlignment="center"
            android:layout_weight="0.2"
            android:textSize="@dimen/main_title"
            android:gravity="center"
            android:textStyle="bold|italic"
            android:text="@string/store_name" />
    </LinearLayout>

    <LinearLayout
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.2"
        android:orientation="vertical">
        <TextView
            android:text="@string/about_us_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/primary_white"
            android:gravity="center"
            android:textSize="@dimen/label_title_medium" />

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scrollbars="none"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:orientation="vertical">

            <TextView
                android:layout_marginTop="20dp"
                android:id="@+id/atomicNumberDefinition"
                android:text="@string/about_us_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/primary_white"
                android:textAlignment="center"
                android:textSize="@dimen/small_content" />
        </ScrollView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3">
        <androidx.appcompat.widget.AppCompatButton
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/custom_button"
            android:id="@+id/outlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/primary_white"
            android:textStyle="bold"
            android:letterSpacing="0.2"
            android:textSize="20dp"
            android:text="@string/start_ordering" />


    </LinearLayout>

</LinearLayout>